--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sidux-edu (0.2.12) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 05 Feb 2008 23:01:18 +0100
+
 sidux-edu (0.2.11) unstable; urgency=low
 
   [ Fabian Wuertz ]
