* last commit again with the new files

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,9 @@ sidux-edu (0.2.13) UNRELEASED; urgency=low
 
   [ Ferdinand Thommes ]
   * updated to new logo
+  * last commit again with the new files
 
- -- Ferdinand Thommes <devil@sidux.com>  Sat, 23 Feb 2008 18:16:58 +0100
+ -- Ferdinand Thommes <devil@sidux.com>  Sat, 23 Feb 2008 18:19:53 +0100
 
 sidux-edu (0.2.12) unstable; urgency=low
 
