--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,9 @@ sidux-edu (0.2.13) UNRELEASED; urgency=low
   [ Ferdinand Thommes ]
   * updated to new logo
   * last commit again with the new files
+  * updated
 
- -- Ferdinand Thommes <devil@sidux.com>  Sat, 23 Feb 2008 18:19:53 +0100
+ -- Ferdinand Thommes <devil@sidux.com>  Sat, 23 Feb 2008 18:22:09 +0100
 
 sidux-edu (0.2.12) unstable; urgency=low
 
