* updated to new logo

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,9 @@ sidux-edu (0.2.13) UNRELEASED; urgency=low
   * updated to new logo
   * last commit again with the new files
   * updated
+  * updated to new logo
 
- -- Ferdinand Thommes <devil@sidux.com>  Sat, 23 Feb 2008 18:22:09 +0100
+ -- Ferdinand Thommes <devil@sidux.com>  Sat, 23 Feb 2008 18:25:44 +0100
 
 sidux-edu (0.2.12) unstable; urgency=low
 
