--- a/debian/changelog
+++ b/debian/changelog
@@ -9,8 +9,9 @@ sidux-edu (0.2.13) UNRELEASED; urgency=low
   * updated
   * updated to new logo
   * updated to new logo
+  * updated to new logo
 
- -- Ferdinand Thommes <devil@sidux.com>  Sat, 23 Feb 2008 18:30:11 +0100
+ -- Ferdinand Thommes <devil@sidux.com>  Sat, 23 Feb 2008 18:33:32 +0100
 
 sidux-edu (0.2.12) unstable; urgency=low
 
