--- a/debian/changelog
+++ b/debian/changelog
@@ -10,8 +10,9 @@ sidux-edu (0.2.13) UNRELEASED; urgency=low
   * updated to new logo
   * updated to new logo
   * updated to new logo
+  * removed mask from sidux s in siduxedu icon
 
- -- Ferdinand Thommes <devil@sidux.com>  Sat, 23 Feb 2008 18:33:32 +0100
+ -- Ferdinand Thommes <devil@sidux.com>  Sat, 23 Feb 2008 21:38:14 +0100
 
 sidux-edu (0.2.12) unstable; urgency=low
 
