sidux-edu (0.2.13) unstable; urgency=low
  * last commit again with the new files
  * updated to new logo
  * removed mask from sidux s in siduxedu icon

 -- Ferdinand Thommes <devil@sidux.com>  Sat, 23 Feb 2008 21:38:14 +0100

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,14 +1,6 @@
-sidux-edu (0.2.13) UNRELEASED; urgency=low
+sidux-edu (0.2.13) unstable; urgency=low
 
-  [ Stefan Lippers-Hollmann ]
-  * NOT RELEASED YET
-
-  [ Ferdinand Thommes ]
-  * updated to new logo
   * last commit again with the new files
-  * updated
-  * updated to new logo
-  * updated to new logo
   * updated to new logo
   * removed mask from sidux s in siduxedu icon
 
