--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sidux-edu (0.2.16) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 21 Mar 2008 10:09:01 +0100
+
 sidux-edu (0.2.15) unstable; urgency=low
 
   * fixed hanzim description fixed tuxpaint.desktop path
