--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
 sidux-edu (0.2.16) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 21 Mar 2008 10:09:01 +0100
+  [ Fabian Wuertz ]
+  * KSociograma pmap updated
+  * Sprachen description updated
+
+ -- Fabian Wuertz <xadras@sidux.com>  Fri, 21 Mar 2008 12:55:49 +0100
 
 sidux-edu (0.2.15) unstable; urgency=low
 
