sidux-edu (0.2.16) unstable; urgency=low
  * KSociograma pmap updated
  * Sprachen description updated

 -- Fabian Wuertz <xadras@sidux.com>  Fri, 21 Mar 2008 12:55:49 +0100

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,5 @@
-sidux-edu (0.2.16) UNRELEASED; urgency=low
+sidux-edu (0.2.16) unstable; urgency=low
 
-  [ Stefan Lippers-Hollmann ]
-  * NOT RELEASED YET
-
-  [ Fabian Wuertz ]
   * KSociograma pmap updated
   * Sprachen description updated
 
