--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sidux-edu (0.2.17) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 21 Mar 2008 14:59:00 +0100
+
 sidux-edu (0.2.16) unstable; urgency=low
 
   * KSociograma pmap updated
