--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,5 @@
-sidux-edu (0.2.17) UNRELEASED; urgency=low
+sidux-edu (0.2.17) unstable; urgency=low
 
-  [ Stefan Lippers-Hollmann ]
-  * NOT RELEASED YET
-
-  [ Fabian Wuertz ]
   * debian: konsole dependency added (solves the problems with the icewm)
 
  -- Fabian Wuertz <xadras@sidux.com>  Sat, 22 Mar 2008 22:47:33 +0100
