--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sidux-edu (0.2.18) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 26 Mar 2008 01:17:31 +0100
+
 sidux-edu (0.2.17) unstable; urgency=low
 
   * debian: konsole dependency added (solves the problems with the icewm)
