--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+sidux-edu (0.2.18+nmu1) UNRELEASED; urgency=low
+
+  * Non-maintainer upload.
+  * added blender.pm
+
+ -- Ferdinand Thommes <devil@sidux.com>  Tue, 06 May 2008 22:03:40 +0200
+
 sidux-edu (0.2.18) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
