--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ sidux-edu (0.2.18+nmu1) UNRELEASED; urgency=low
 
   * Non-maintainer upload.
   * added blender.pm
+  * fixed sidux-edu.desktop
 
- -- Ferdinand Thommes <devil@sidux.com>  Tue, 06 May 2008 22:03:40 +0200
+ -- Ferdinand Thommes <devil@sidux.com>  Tue, 06 May 2008 22:04:30 +0200
 
 sidux-edu (0.2.18) UNRELEASED; urgency=low
 
