--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,9 @@ sidux-edu (0.2.18+nmu1) UNRELEASED; urgency=low
   * Non-maintainer upload.
   * added blender.pm
   * fixed sidux-edu.desktop
+  * fixed ksimus.pm
 
- -- Ferdinand Thommes <devil@sidux.com>  Tue, 06 May 2008 22:04:30 +0200
+ -- Ferdinand Thommes <devil@sidux.com>  Tue, 06 May 2008 22:05:02 +0200
 
 sidux-edu (0.2.18) UNRELEASED; urgency=low
 
