--- a/debian/changelog
+++ b/debian/changelog
@@ -1,19 +1,12 @@
-sidux-edu (0.2.18+nmu1) UNRELEASED; urgency=low
+sidux-edu (0.2.18) unstable; urgency=low
 
-  * Non-maintainer upload.
   * added blender.pm
   * fixed sidux-edu.desktop
   * fixed ksimus.pm
-  * *added generic name to sidux-edu.desktop
+  * added generic name to sidux-edu.desktop
   * last commit of blender.pmap was .html, now corrected to .txt
 
  -- Ferdinand Thommes <devil@sidux.com>  Tue, 06 May 2008 22:55:24 +0200
-
-sidux-edu (0.2.18) UNRELEASED; urgency=low
-
-  * NOT RELEASED YET
-
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 26 Mar 2008 01:17:31 +0100
 
 sidux-edu (0.2.17) unstable; urgency=low
 
