icon files removed

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,8 +12,9 @@ sidux-edu (0.2.19) UNRELEASED; urgency=low
   * start widget fixed
   * qgis pmap removed
   * icon files removed
+  * icon files removed
 
- -- Fabian Wuertz <xadras@sidux.com>  Sun, 18 May 2008 22:03:38 +0200
+ -- Fabian Wuertz <xadras@sidux.com>  Sun, 18 May 2008 22:04:52 +0200
 
 sidux-edu (0.2.18) unstable; urgency=low
 
