--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sidux-edu (0.3.1) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 19 May 2008 14:51:21 +0200
+
 sidux-edu (0.3.0) unstable; urgency=low
 
   [ Fabian Wuertz ]
