--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 sidux-edu (0.3.1) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 19 May 2008 14:51:21 +0200
+  [ Fabian Wuertz ]
+  * some small bugs in applyChanges installer fixed
+
+ -- Fabian Wuertz <xadras@sidux.com>  Mon, 19 May 2008 23:34:05 +0200
 
 sidux-edu (0.3.0) unstable; urgency=low
 
