--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,5 @@
-sidux-edu (0.3.1) UNRELEASED; urgency=low
+sidux-edu (0.3.1) unstable; urgency=low
 
-  [ Stefan Lippers-Hollmann ]
-  * NOT RELEASED YET
-
-  [ Fabian Wuertz ]
   * some small bugs in applyChanges installer fixed
 
  -- Fabian Wuertz <xadras@sidux.com>  Mon, 19 May 2008 23:34:05 +0200
