--- a/debian/changelog
+++ b/debian/changelog
@@ -9,8 +9,9 @@ sidux-edu (0.3.2) UNRELEASED; urgency=low
   * kappinstaller added 2/5
   * kappinstaller added 3/5
   * kappinstaller added 4/5
+  * kappinstaller added 6/7
 
- -- Fabian Wuertz <xadras@sidux.com>  Wed, 28 May 2008 22:38:41 +0200
+ -- Fabian Wuertz <xadras@sidux.com>  Wed, 28 May 2008 22:47:03 +0200
 
 sidux-edu (0.3.1) unstable; urgency=low
 
