sidux-edu (0.3.2) unstable; urgency=low
  * pmap format changed
  * kappinstaller added 1/5
  * kappinstaller added 2/5
  * kappinstaller added 3/5
  * kappinstaller added 4/5
  * kappinstaller added 6/7

 -- Fabian Wuertz <xadras@sidux.com>  Wed, 28 May 2008 22:47:03 +0200

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,5 @@
-sidux-edu (0.3.2) UNRELEASED; urgency=low
+sidux-edu (0.3.2) unstable; urgency=low
 
-  [ Stefan Lippers-Hollmann ]
-  * NOT RELEASED YET
-
-  [ Fabian Wuertz ]
   * pmap format changed
   * kappinstaller added 1/5
   * kappinstaller added 2/5
