--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sidux-edu (0.4.1) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 29 May 2008 22:10:59 +0200
+
 sidux-edu (0.4.0) unstable; urgency=low
 
   * pmap format changed
