--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
 sidux-edu (0.4.1) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 29 May 2008 22:10:59 +0200
+  [ Fabian Wuertz ]
+  * apt-get-konsole to lib
+  * long description for kappinstaller
+
+ -- Fabian Wuertz <xadras@sidux.com>  Thu, 29 May 2008 22:15:28 +0200
 
 sidux-edu (0.4.0) unstable; urgency=low
 
