--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,7 @@
-sidux-edu (0.4.2) unstable; urgency=low
+sidux-edu (0.4.2) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+  * FTBS with gcc-4.3
 
   [ Ferdinand Thommes ]
   * changed blender pmap to new format
@@ -6,7 +9,7 @@ sidux-edu (0.4.2) unstable; urgency=low
   [ Stefan Lippers-Hollmann ]
   * add devil to uploaders.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 06 Jun 2008 00:16:11 +0200
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 06 Jun 2008 00:20:25 +0200
 
 sidux-edu (0.4.1) unstable; urgency=low
 
