--- a/debian/changelog
+++ b/debian/changelog
@@ -9,7 +9,11 @@ sidux-edu (0.4.2) UNRELEASED; urgency=low
   [ Stefan Lippers-Hollmann ]
   * add devil to uploaders.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 06 Jun 2008 00:20:25 +0200
+  [ Fabian Wuertz ]
+  * gcc-4.3 problems fixed
+  * blender pmap fixed
+
+ -- Fabian Wuertz <xadras@sidux.com>  Fri, 06 Jun 2008 10:24:32 +0200
 
 sidux-edu (0.4.1) unstable; urgency=low
 
