--- a/debian/changelog
+++ b/debian/changelog
@@ -1,19 +1,18 @@
-sidux-edu (0.4.2) UNRELEASED; urgency=low
-
-  * NOT RELEASED YET
-  * FTBS with gcc-4.3
+sidux-edu (0.4.2) unstable; urgency=low
 
   [ Ferdinand Thommes ]
   * changed blender pmap to new format
 
   [ Stefan Lippers-Hollmann ]
   * add devil to uploaders.
+  * bump standards version to 3.8.0, no changes necessary.
+  * switch to compat level 7.
 
   [ Fabian Wuertz ]
   * gcc-4.3 problems fixed
   * blender pmap fixed
 
- -- Fabian Wuertz <xadras@sidux.com>  Fri, 06 Jun 2008 10:24:32 +0200
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 06 Jun 2008 11:01:04 +0200
 
 sidux-edu (0.4.1) unstable; urgency=low
 
