--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-sidux-edu (0.4.3) UNRELEASED; urgency=low
+sidux-edu (0.4.3) unstable; urgency=low
 
-  * NOT RELEASED YET
+  * fix bugs and lintian errors in debian/control.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 06 Jun 2008 11:05:47 +0200
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 06 Jun 2008 11:12:51 +0200
 
 sidux-edu (0.4.2) unstable; urgency=low
 
