--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sidux-edu (0.4.4) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 06 Jun 2008 11:17:14 +0200
+
 sidux-edu (0.4.3) unstable; urgency=low
 
   * fix bugs and lintian errors in debian/control.
