--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 sidux-edu (0.4.4) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 06 Jun 2008 11:17:14 +0200
+  [ Fabian Wuertz ]
+  * description of the blender pmap updated
+
+ -- Fabian Wuertz <xadras@sidux.com>  Sat, 05 Jul 2008 00:03:39 +0200
 
 sidux-edu (0.4.3) unstable; urgency=low
 
