--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,5 @@
-sidux-edu (0.4.4) UNRELEASED; urgency=low
+sidux-edu (0.4.4) unstable; urgency=low
 
-  [ Stefan Lippers-Hollmann ]
-  * NOT RELEASED YET
-
-  [ Fabian Wuertz ]
   * description of the blender pmap updated
 
  -- Fabian Wuertz <xadras@sidux.com>  Sat, 05 Jul 2008 00:03:39 +0200
