--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sidux-edu (0.4.5) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 05 Jul 2008 03:16:30 +0200
+
 sidux-edu (0.4.4) unstable; urgency=low
 
   * description of the blender pmap updated
