--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 sidux-edu (0.4.5) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 05 Jul 2008 03:16:30 +0200
+  [ Fabian Wuertz ]
+  * Terminal also accects the value true
+
+ -- Fabian Wuertz <xadras@sidux.com>  Sun, 31 Aug 2008 19:08:53 +0200
 
 sidux-edu (0.4.4) unstable; urgency=low
 
