--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,9 @@ sidux-edu (0.4.5) UNRELEASED; urgency=low
 
   [ Fabian Wuertz ]
   * Terminal also accects the value true
+  * pmaps: Terminal=yes -> Terminal=true
 
- -- Fabian Wuertz <xadras@sidux.com>  Sun, 31 Aug 2008 19:08:53 +0200
+ -- Fabian Wuertz <xadras@sidux.com>  Sun, 31 Aug 2008 19:15:49 +0200
 
 sidux-edu (0.4.4) unstable; urgency=low
 
