--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sidux-edu (0.4.7) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 21 Oct 2008 21:05:06 +0200
+
 sidux-edu (0.4.6) unstable; urgency=low
 
   * fixed copyright dates
